; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_vlcs_video_display.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_vlcs_video_display.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_source = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@time_start = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @vlcs_video_display to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlcs_video_display(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vlc_source*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.vlc_source*
  store %struct.vlc_source* %7, %struct.vlc_source** %5, align 8
  %8 = call i64 (...) @libvlc_clock_()
  %9 = mul i64 %8, 1000
  %10 = load i64, i64* @time_start, align 8
  %11 = sub i64 %9, %10
  %12 = load %struct.vlc_source*, %struct.vlc_source** %5, align 8
  %13 = getelementptr inbounds %struct.vlc_source, %struct.vlc_source* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i64 %11, i64* %14, align 8
  %15 = load %struct.vlc_source*, %struct.vlc_source** %5, align 8
  %16 = getelementptr inbounds %struct.vlc_source, %struct.vlc_source* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.vlc_source*, %struct.vlc_source** %5, align 8
  %19 = getelementptr inbounds %struct.vlc_source, %struct.vlc_source* %18, i32 0, i32 0
  %20 = call i32 @obs_source_output_video(i32 %17, %struct.TYPE_2__* %19)
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @UNUSED_PARAMETER(i8* %21)
  ret void
}

declare dso_local i64 @libvlc_clock_(...) #1

declare dso_local i32 @obs_source_output_video(i32, %struct.TYPE_2__*) #1

declare dso_local i32 @UNUSED_PARAMETER(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
